src/parser/ExpressionParser.java
// Generated from C:/Users/Computer/IdeaProjects/MT_Task3/src/parser\Expression.g4 by ANTLR 4.7.2
package parser;

  import entities.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, TYPE=20, VARNAME=21, STR=22, INCDEC=23, NUMBER=24, 
		OPERATOR=25, COMPARE=26, LOGBINOP=27, WS=28;
	public static final int
		RULE_body = 0, RULE_statement = 1, RULE_declaration = 2, RULE_mAssign = 3, 
		RULE_arithmExpression = 4, RULE_increment = 5, RULE_reading = 6, RULE_printing = 7, 
		RULE_whileCycle = 8, RULE_predicate = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"body", "statement", "declaration", "mAssign", "arithmExpression", "increment", 
			"reading", "printing", "whileCycle", "predicate"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\r'", "'\n'", "':'", "'='", "','", "'+'", "'*'", "'-'", "'/'", 
			"'('", "')'", "'read('", "'print('", "'while ('", "'){\r\n'", "'\r\n}'", 
			"'!'", "'true'", "'false'", "'int'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "TYPE", "VARNAME", "STR", 
			"INCDEC", "NUMBER", "OPERATOR", "COMPARE", "LOGBINOP", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class BodyContext extends ParserRuleContext {
		public Body bodyResult;
		public BodyContext pBody;
		public StatementContext stat;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		return body(0);
	}

	private BodyContext body(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BodyContext _localctx = new BodyContext(_ctx, _parentState);
		BodyContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_body, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(21);
			((BodyContext)_localctx).stat = statement();
			((BodyContext)_localctx).bodyResult =  new Body(((BodyContext)_localctx).stat.statementResult);
			}
			_ctx.stop = _input.LT(-1);
			setState(32);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new BodyContext(_parentctx, _parentState);
					_localctx.pBody = _prevctx;
					_localctx.pBody = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_body);
					setState(24);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(25);
					match(T__0);
					setState(26);
					match(T__1);
					setState(27);
					((BodyContext)_localctx).stat = statement();
					((BodyContext)_localctx).bodyResult =  ((BodyContext)_localctx).pBody.bodyResult.add(((BodyContext)_localctx).stat.statementResult);
					}
					} 
				}
				setState(34);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Statement statementResult;
		public DeclarationContext decl;
		public MAssignContext mAsgn;
		public IncrementContext inc;
		public ReadingContext rd;
		public PrintingContext prnt;
		public WhileCycleContext whl;
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public MAssignContext mAssign() {
			return getRuleContext(MAssignContext.class,0);
		}
		public IncrementContext increment() {
			return getRuleContext(IncrementContext.class,0);
		}
		public ReadingContext reading() {
			return getRuleContext(ReadingContext.class,0);
		}
		public PrintingContext printing() {
			return getRuleContext(PrintingContext.class,0);
		}
		public WhileCycleContext whileCycle() {
			return getRuleContext(WhileCycleContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(35);
				((StatementContext)_localctx).decl = declaration();
				((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).decl.declarationResult;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				((StatementContext)_localctx).mAsgn = mAssign();
				((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).mAsgn.assignResult;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(41);
				((StatementContext)_localctx).inc = increment();
				((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).inc.incResult;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(44);
				((StatementContext)_localctx).rd = reading();
				((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).rd.readingResult;
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(47);
				((StatementContext)_localctx).prnt = printing();
				((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).prnt.printingResult;
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(50);
				((StatementContext)_localctx).whl = whileCycle();
				((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).whl.whileResult;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Statement declarationResult;
		public Token VARNAME;
		public TerminalNode VARNAME() { return getToken(ExpressionParser.VARNAME, 0); }
		public TerminalNode TYPE() { return getToken(ExpressionParser.TYPE, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			((DeclarationContext)_localctx).VARNAME = match(VARNAME);
			setState(56);
			match(T__2);
			setState(57);
			match(TYPE);
			((DeclarationContext)_localctx).declarationResult =  new Declaration((((DeclarationContext)_localctx).VARNAME!=null?((DeclarationContext)_localctx).VARNAME.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MAssignContext extends ParserRuleContext {
		public Statement assignResult;
		public Token VARNAME;
		public ArithmExpressionContext arithm0;
		public MAssignContext asgn;
		public ArithmExpressionContext arithm;
		public TerminalNode VARNAME() { return getToken(ExpressionParser.VARNAME, 0); }
		public ArithmExpressionContext arithmExpression() {
			return getRuleContext(ArithmExpressionContext.class,0);
		}
		public MAssignContext mAssign() {
			return getRuleContext(MAssignContext.class,0);
		}
		public MAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterMAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitMAssign(this);
		}
	}

	public final MAssignContext mAssign() throws RecognitionException {
		MAssignContext _localctx = new MAssignContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mAssign);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				((MAssignContext)_localctx).VARNAME = match(VARNAME);
				setState(61);
				match(T__3);
				setState(62);
				((MAssignContext)_localctx).arithm0 = arithmExpression(0);
				((MAssignContext)_localctx).assignResult =  new Assignment((((MAssignContext)_localctx).VARNAME!=null?((MAssignContext)_localctx).VARNAME.getText():null), ((MAssignContext)_localctx).arithm0.arithmResult);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				((MAssignContext)_localctx).VARNAME = match(VARNAME);
				setState(66);
				match(T__4);
				setState(67);
				((MAssignContext)_localctx).asgn = mAssign();
				setState(68);
				match(T__4);
				setState(69);
				((MAssignContext)_localctx).arithm = arithmExpression(0);
				((MAssignContext)_localctx).assignResult =  ((Assignment) ((MAssignContext)_localctx).asgn.assignResult).addLeft((((MAssignContext)_localctx).VARNAME!=null?((MAssignContext)_localctx).VARNAME.getText():null)).addRight(((MAssignContext)_localctx).arithm.arithmResult);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithmExpressionContext extends ParserRuleContext {
		public String arithmResult;
		public ArithmExpressionContext a1;
		public ArithmExpressionContext a3;
		public ArithmExpressionContext a4;
		public ArithmExpressionContext a5;
		public Token NUMBER;
		public Token VARNAME;
		public ArithmExpressionContext a2;
		public List<ArithmExpressionContext> arithmExpression() {
			return getRuleContexts(ArithmExpressionContext.class);
		}
		public ArithmExpressionContext arithmExpression(int i) {
			return getRuleContext(ArithmExpressionContext.class,i);
		}
		public TerminalNode NUMBER() { return getToken(ExpressionParser.NUMBER, 0); }
		public TerminalNode VARNAME() { return getToken(ExpressionParser.VARNAME, 0); }
		public ArithmExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterArithmExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitArithmExpression(this);
		}
	}

	public final ArithmExpressionContext arithmExpression() throws RecognitionException {
		return arithmExpression(0);
	}

	private ArithmExpressionContext arithmExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ArithmExpressionContext _localctx = new ArithmExpressionContext(_ctx, _parentState);
		ArithmExpressionContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_arithmExpression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				{
				setState(75);
				match(T__9);
				setState(76);
				((ArithmExpressionContext)_localctx).a3 = arithmExpression(0);
				setState(77);
				match(T__10);
				((ArithmExpressionContext)_localctx).arithmResult =  "(" + ((ArithmExpressionContext)_localctx).a3.arithmResult + ")";
				}
				break;
			case T__7:
				{
				setState(80);
				match(T__7);
				setState(81);
				((ArithmExpressionContext)_localctx).a4 = arithmExpression(4);
				((ArithmExpressionContext)_localctx).arithmResult =  "-" + ((ArithmExpressionContext)_localctx).a4.arithmResult;
				}
				break;
			case T__5:
				{
				setState(84);
				match(T__5);
				setState(85);
				((ArithmExpressionContext)_localctx).a5 = arithmExpression(3);
				((ArithmExpressionContext)_localctx).arithmResult =  ((ArithmExpressionContext)_localctx).a5.arithmResult;
				}
				break;
			case NUMBER:
				{
				setState(88);
				((ArithmExpressionContext)_localctx).NUMBER = match(NUMBER);
				((ArithmExpressionContext)_localctx).arithmResult =  (((ArithmExpressionContext)_localctx).NUMBER!=null?((ArithmExpressionContext)_localctx).NUMBER.getText():null);
				}
				break;
			case VARNAME:
				{
				setState(90);
				((ArithmExpressionContext)_localctx).VARNAME = match(VARNAME);
				((ArithmExpressionContext)_localctx).arithmResult =  (((ArithmExpressionContext)_localctx).VARNAME!=null?((ArithmExpressionContext)_localctx).VARNAME.getText():null);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(114);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new ArithmExpressionContext(_parentctx, _parentState);
						_localctx.a1 = _prevctx;
						_localctx.a1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_arithmExpression);
						setState(94);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(95);
						match(T__5);
						setState(96);
						((ArithmExpressionContext)_localctx).a2 = arithmExpression(10);
						((ArithmExpressionContext)_localctx).arithmResult =  ((ArithmExpressionContext)_localctx).a1.arithmResult + "+" + ((ArithmExpressionContext)_localctx).a2.arithmResult;
						}
						break;
					case 2:
						{
						_localctx = new ArithmExpressionContext(_parentctx, _parentState);
						_localctx.a1 = _prevctx;
						_localctx.a1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_arithmExpression);
						setState(99);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(100);
						match(T__6);
						setState(101);
						((ArithmExpressionContext)_localctx).a2 = arithmExpression(9);
						((ArithmExpressionContext)_localctx).arithmResult =  ((ArithmExpressionContext)_localctx).a1.arithmResult + "*" + ((ArithmExpressionContext)_localctx).a2.arithmResult;
						}
						break;
					case 3:
						{
						_localctx = new ArithmExpressionContext(_parentctx, _parentState);
						_localctx.a1 = _prevctx;
						_localctx.a1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_arithmExpression);
						setState(104);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(105);
						match(T__7);
						setState(106);
						((ArithmExpressionContext)_localctx).a2 = arithmExpression(8);
						((ArithmExpressionContext)_localctx).arithmResult =  ((ArithmExpressionContext)_localctx).a1.arithmResult + "-" + ((ArithmExpressionContext)_localctx).a2.arithmResult;
						}
						break;
					case 4:
						{
						_localctx = new ArithmExpressionContext(_parentctx, _parentState);
						_localctx.a1 = _prevctx;
						_localctx.a1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_arithmExpression);
						setState(109);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(110);
						match(T__8);
						setState(111);
						((ArithmExpressionContext)_localctx).a2 = arithmExpression(7);
						((ArithmExpressionContext)_localctx).arithmResult =  ((ArithmExpressionContext)_localctx).a1.arithmResult + "/" + ((ArithmExpressionContext)_localctx).a2.arithmResult;
						}
						break;
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class IncrementContext extends ParserRuleContext {
		public Statement incResult;
		public Token INCDEC;
		public Token VARNAME;
		public TerminalNode INCDEC() { return getToken(ExpressionParser.INCDEC, 0); }
		public TerminalNode VARNAME() { return getToken(ExpressionParser.VARNAME, 0); }
		public IncrementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_increment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterIncrement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitIncrement(this);
		}
	}

	public final IncrementContext increment() throws RecognitionException {
		IncrementContext _localctx = new IncrementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_increment);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INCDEC:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				((IncrementContext)_localctx).INCDEC = match(INCDEC);
				setState(120);
				((IncrementContext)_localctx).VARNAME = match(VARNAME);
				((IncrementContext)_localctx).incResult =  new Unary(true, (((IncrementContext)_localctx).INCDEC!=null?((IncrementContext)_localctx).INCDEC.getText():null), (((IncrementContext)_localctx).VARNAME!=null?((IncrementContext)_localctx).VARNAME.getText():null));
				}
				break;
			case VARNAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				((IncrementContext)_localctx).VARNAME = match(VARNAME);
				setState(123);
				((IncrementContext)_localctx).INCDEC = match(INCDEC);
				((IncrementContext)_localctx).incResult =  new Unary(false, (((IncrementContext)_localctx).INCDEC!=null?((IncrementContext)_localctx).INCDEC.getText():null), (((IncrementContext)_localctx).VARNAME!=null?((IncrementContext)_localctx).VARNAME.getText():null));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadingContext extends ParserRuleContext {
		public Statement readingResult;
		public Token VARNAME;
		public TerminalNode VARNAME() { return getToken(ExpressionParser.VARNAME, 0); }
		public ReadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterReading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitReading(this);
		}
	}

	public final ReadingContext reading() throws RecognitionException {
		ReadingContext _localctx = new ReadingContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_reading);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__11);
			setState(128);
			((ReadingContext)_localctx).VARNAME = match(VARNAME);
			setState(129);
			match(T__10);
			((ReadingContext)_localctx).readingResult =  new Reading((((ReadingContext)_localctx).VARNAME!=null?((ReadingContext)_localctx).VARNAME.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintingContext extends ParserRuleContext {
		public Statement printingResult;
		public Token VARNAME;
		public Token STR;
		public TerminalNode VARNAME() { return getToken(ExpressionParser.VARNAME, 0); }
		public TerminalNode STR() { return getToken(ExpressionParser.STR, 0); }
		public PrintingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printing; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterPrinting(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitPrinting(this);
		}
	}

	public final PrintingContext printing() throws RecognitionException {
		PrintingContext _localctx = new PrintingContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_printing);
		try {
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				match(T__12);
				setState(133);
				((PrintingContext)_localctx).VARNAME = match(VARNAME);
				setState(134);
				match(T__10);
				((PrintingContext)_localctx).printingResult =  new Printing((((PrintingContext)_localctx).VARNAME!=null?((PrintingContext)_localctx).VARNAME.getText():null), Type.INT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(T__12);
				setState(137);
				((PrintingContext)_localctx).STR = match(STR);
				setState(138);
				match(T__10);
				((PrintingContext)_localctx).printingResult =  new Printing((((PrintingContext)_localctx).STR!=null?((PrintingContext)_localctx).STR.getText():null), Type.STRING);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileCycleContext extends ParserRuleContext {
		public Statement whileResult;
		public PredicateContext expr;
		public BodyContext bd;
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public WhileCycleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileCycle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterWhileCycle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitWhileCycle(this);
		}
	}

	public final WhileCycleContext whileCycle() throws RecognitionException {
		WhileCycleContext _localctx = new WhileCycleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_whileCycle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__13);
			setState(143);
			((WhileCycleContext)_localctx).expr = predicate(0);
			setState(144);
			match(T__14);
			setState(145);
			((WhileCycleContext)_localctx).bd = body(0);
			setState(146);
			match(T__15);
			((WhileCycleContext)_localctx).whileResult =  new WhileCycle(((WhileCycleContext)_localctx).expr.predicateResult); ((WhileCycle) _localctx.whileResult).addAll(((Body) ((WhileCycleContext)_localctx).bd.bodyResult).getStatements());
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
